# Nsu-computer-graphics

./: .gitignore  README.md
Filter/: CMakeLists.txt  Filter.pro  factory.h  filter_action_group_creator.cc  filter_action_group_creator.h  filter_applicator.cc  filter_applicator.h  filter_runner.cc  filter_runner.h  image_wrapper.cc  image_wrapper.h
Filter/filters/: abstract_filter.h  base_filter_widget.cc  base_filter_widget.h  image_handler.cc  image_handler.h  image_wrapper.cc  image_wrapper.h  rgb888.h  util.h
Filter/filters/blur/: blur_filter.cc  blur_filter.h  blur_widget.cc  blur_widget.h  median_blur_filter.cc  median_blur_filter.h
Filter/filters/convolution/: convolution_filter.h  square_matrix.h
Filter/filters/edge_detection/: edge_detection_filter.cc  edge_detection_filter.h  edge_detection_widget.cc  edge_detection_widget.h
Filter/filters/emboss/: emboss_filter.cc  emboss_filter.h  emboss_widget.cc  emboss_widget.h
Filter/filters/gamma_correction/: gamma_correction_filter.cc  gamma_correction_filter.h  gamma_correction_widget.cc  gamma_correction_widget.h
Filter/filters/grayscale/: grayscale_filter.cc  grayscale_filter.h  grayscale_widget.cc  grayscale_widget.h
Filter/filters/negative/: negative_filter.cc  negative_filter.h  negative_widget.cc  negative_widget.h
Filter/filters/rotation/: rotation_filter.cc  rotation_filter.h  rotation_widget.cc  rotation_widget.h
Filter/filters/scaling/: scaling_filter.cc  scaling_filter.h
Filter/filters/sharpening/: sharpening_filter.cc  sharpening_filter.h  sharpening_widget.cc  sharpening_widget.h
Filter/filters/threshold/: threshold_filter.cc  threshold_filter.h
Filter/filters/watercolor/: watercolor_filter.cc  watercolor_filter.h  watercolor_widget.cc  watercolor_widget.h
Filter/filters/zoom/: zoom_filter.cc  zoom_filter.h  zoom_widget.cc  zoom_widget.h
Filter/model/: filter_applicator.h
Filter/view/: filter_action.cc  filter_action.h  filter_action_group.cc  filter_action_group.h  main_window.cc  main_window.h  value_setter.cc  value_setter.h  zone.cc  zone.h  zone_a.cc  zone_a.h
Isolines/: CMakeLists.txt  color_map_painter.cc  color_map_painter.h  color_matcher.cc  color_matcher.h  coordinates_converter.cc  coordinates_converter.h  function_types.h  image_wrapper.cc  image_wrapper.h  isoline_painter.cc  isoline_painter.h  main.cc  plain_color_matcher.cc  plain_color_matcher.h  smooth_color_matcher.cc  smooth_color_matcher.h
Isolines/view/: color_map_widget.cc  color_map_widget.h  double_value_setter.cc  double_value_setter.h  legend_widget.cc  legend_widget.h  main_window.cc  main_window.h  options_dialog.cc  options_dialog.h  value_setter.h
Life/: CMakeLists.txt  Life.pro  main.cpp
Life/FIT_14202_Grachev_Life_Data/: glider.txt
Life/model/: abstract_notifier.h  life_field.cc  life_field.cpp  life_field.h  life_game_engine.cc  life_game_engine.h  life_impacts.cc  life_impacts.h
Life/view/: canvas.cpp  canvas.h  field_display.cpp  field_display.h  hex_grid_canvas.cpp  hex_grid_canvas.h  main_window.cpp  main_window.h  mode.h  new_field_dialog.cc  new_field_dialog.h  signal_notifier.h
Life/view/dialogs/: cell_size_group_box.cc  cell_size_group_box.h  field_size_group_box.cc  field_size_group_box.h  new_field_dialog.cc  new_field_dialog.h  options_dialog.cc  options_dialog.h  rules_group_box.cc  rules_group_box.h
Wireframe/: CMakeLists.txt  main.cc  main_window.cc  main_window.h
Wireframe/curve/: bspline.cc  bspline.h  curve.cc  curve.h
Wireframe/figure/: parallelepiped.cc  parallelepiped.h  plain_segment_object.cc  plain_segment_object.h  solid_of_revolution.cc  solid_of_revolution.h
Wireframe/util/: bounding_box.cc  bounding_box.h  image_wrapper.cc  image_wrapper.h  matrix_utils.cc  matrix_utils.h  scene_info.cc  scene_info.h  scene_loader.cc  scene_loader.h  transform.cc
Wireframe/view/: camera_properties_box.cc  camera_properties_box.h  object_properties_box.cc  object_properties_box.h  object_properties_widget.cc  object_properties_widget.h  properties_widget.cc  properties_widget.h  spline_widget.cc  spline_widget.h  wireframe_widget.cc  wireframe_widget.h
Wireframe/visualization/: base_object.cc  base_object.h  camera.cc  camera.h  object.cc  object.h  scene.cc  scene.h  segment.h
